Criação do controller Reservas

--- a/teste/teste/appsettings.json
+++ b/teste/teste/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-teste-E7815D7C-AA9A-4155-A470-39F6F663F4FF;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Teste;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "Context": "Server=(localdb)\\mssqllocaldb;Database=Teste;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
